# rusty-minesweeper

./: .dockerignore  .gitignore  .gitlab-ci.yml  .init.sh  Cargo.toml  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  folder_structure.txt  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
api/: Cargo.toml
api/src/: main.rs
app/: MinesweeperClient.tsx  MinesweeperStart.tsx  _app.tsx  board.tsx  globals.css  layout.tsx  page.tsx
app/api/: continueGameAPI.ts  doFlagAPI.ts  doPlayAPI.ts  findGameAPI.ts  getGameAPI.ts  testAPI.ts
app/context/: MinesweeperContext.tsx
app/functions/: buildBoard.ts  getButtonMarkup.ts  getDataFromAPI.ts  getSeed.ts
app/pages/: MinesweeperPlay.tsx  MinesweeperStart.tsx
app/types/: game.ts
backend/: Cargo.toml  Dockerfile
backend/src/: api.rs  app.rs  main.rs  rusty-minesweeper.rs
backend/src/db_connection/: create_and_connect.rs  mod.rs
backend/src/domain/: game_generation.rs  game_state.rs  mod.rs  play.rs  two_d_vector.rs
backend/src/domain/base/: game_generation.rs  two_d_vector.rs
backend/src/domain/logic/: game_state.rs  mod.rs
backend/src/domain/logic/base_components/: game_generation.rs  mod.rs  two_d_vector.rs
db/: rusty_minesweeper_db.sql
domain/logic/: dummy.rs
domain/tests/: test_dummy.rs
src/: lib.rs
src/domain/: game_generation.rs
src/domain/logic/: dummy.rs  game_state.rs  mod.rs  two_d_vector.rs
tests/: test_dummy.rs  test_game_state.rs  test_two_d_vector.rs
