bin = [
  { name = "main", path = "src/main.rs" },
  { name = "dummy", path = "src/domain/logic/dummy.rs" },
  { name = "test_dummy", path = "tests/test_dummy.rs" },
]

[package]
name = "rusty-minesweeper"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
