bin = [
  { name = "main", path = "src/main.rs" },
  { name = "dummy", path = "src/domain/logic/dummy.rs" },
  { name = "test_dummy", path = "tests/test_dummy.rs" },
  { name = "game_state", path = "src/domain/logic/game_state.rs" },
  { name = "test_game_state", path = "tests/test_game_state.rs" },
]

[package]
name = "rusty-minesweeper"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
rand = "0.8"
rand_chacha = "0.3"
itertools = "0.14"
