bin = [
  { name = "main", path = "src/main.rs" },
]

[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-net = "0.6"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43", features = ["full"] }
wasm-bindgen-futures = "0.4"
