bin = [
  { name = "main", path = "src/main.rs" },
  { name = "game_generation", path = "src/domain/game_generation.rs" },
  { name = "game_state", path = "src/domain/game_state.rs" },
  { name = "two_d_vector", path = "src/domain/two_d_vector.rs" },
]

[package]
name = "rusty-minesweeper"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-net = "0.6"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43", features = ["full"] }
wasm-bindgen-futures = "0.4"
rand = "0.8"
rand_chacha = "0.3"
itertools = "0.14"
