bin = [
  { name = "main", path = "src/main.rs" },
]

[package]
name = "rusty-minesweeper"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-net = "0.6"
rand = "0.8"
rand_chacha = "0.3"
itertools = "0.14"
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43", features = ["full"] }
wasm-bindgen-futures = "0.4"
tower-http = { version = "0.3", features = ["cors"]}
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
